@@ -3,6 +3,9 @@
 	* src/RcppBDTpt.cpp: Comparison and arithmethic support for posix time
 	* R/zzz.R: associated S4 methods
 
+	* inst/include/RcppBDTpt.h: Put declaration for posix time class here
+	* inst/include/RcppBDTdu.h: Put declaration for duration class here
+
 2012-10-22  Romain Francois  <romain@r-enthusiasts.com>
 
 	* src/RcppBDTdu.cpp: implementing functions hours, minutes, ... and operators
